--- a/h2_id_auto_label_subsection__.html
+++ b/h2_id_auto_label_subsection__.html
@@ -1,1 +1,1 @@
-<h2 id="auto-label-subsection-996091" class="ltx_title_subsection">Single Cell Methods<br></h2>
+<h2 class="ltx_title_subsection">Single Cell Methods are interesting.<br></h2><div><br></div><div>This is also intersting.&nbsp;<br></div><div><br></div><div>Drop-seq<br></div>
